# axum_extensions

./: Cargo.toml
src/: lib.rs  main.rs
src/router/: healthcheck.rs  mod.rs
